# biggan

./: .gitignore  INSTALL.md  Pipfile  README.md  bn.py  cyclegan.py  data.py  extract_frames.py  gan.py  instance_norm.py  layers.py  main.py  models.py  nets.py  networks.py  pyproject.toml  requirements.txt  spectral_norm.py  sync_batch_norm.py  test_sync_batch_norm.py  tpu.py  walk.py  workspace.ipynb  ygan.py
.circleci/: config.yml
biggan/: __init__.py  architecture.py  data.py  layers.py  model.py  networks.py  training.py
biggan/architecture/: __init__.py  attention.py  conditional_batch_normalization.py  discriminator.py  generator.py  spectral_normalization.py
biggan/config/: __init__.py  base.yaml  default.yaml  model.yaml  train.yaml  training.yaml
biggan/scripts/: prepare.py  train.py
prog/: models.py  workspace.ipynb
prog/.ipynb_checkpoints/: workspace-checkpoint.ipynb
scripts/: prepare.py  train-legacy.py  train.py  train_legacy.py
src/: bn.py  data.py  nets.py  up.py
src/custom_layers/: __init__.py  batch_normalization.py  bn.py  sn.py  spectral_normalization.py  up.py  updown.py
tests/architecture/: test_attention.py  test_conditional_batch_normalization.py
tests/config/: test_config.py
tests/model/: test_build_and_train_model.py
